Wrap classes 'loading-cont' and 'error-cont' in 'RandomMovie' to avoid interferences

--- a/client/src/components/RandomMovie/RandomMovie.scss
+++ b/client/src/components/RandomMovie/RandomMovie.scss
@@ -6,10 +6,12 @@
   position: relative;
 }
 
-.loading-cont,
-.error-cont {
-  width: 95% !important;
-  height: 40vh;
+.RandomMovie {
+  .loading-cont,
+  .error-cont {
+    width: 95% !important;
+    height: 40vh;
+  }
 }
 
 .movie-title {
